# brain-learning

./: .editorconfig  .gitignore  Fonction.py  README.md  main.py
.github/: dependabot.yml
Cx_freeze/: Setup.py  setup.cfg
Exe/: Setup.py
Executable/: Setup.py  setup.cfg
Pyinstaller/: setup.spec
