[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    requests
    importlib-metadata; python_version<"3.9"
package_dir=
    =brain-learning
packages=find:

[options.packages.find]
where=brain-learning

[metadata]
name = "Brain_Learning"
author = "Kevin HOUDAYER & Dimitri SAUTRON"
author_email = XXX@XXX
options = options
version = "1.0"
description = 'Brain Learning'
classifiers =
    Programming Language :: Python :: 3

[build_exe]
includes = idna,tkinter,os
include_files = Fonction.py
bin_includes = lib
excludes = *
include_msvcr
